--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                     <dd><a href="tel:+7734120574">(773) 412-0574</a></dd>
                                     <dt>Email</dt>
                                     <dd><a href="mailto:kevinbarrios@ymail.com">kevinbarrios@ymail.com</a></dd>
-                                    <dt><a href="https://drive.google.com/file/d/10f8FYbvQoNjRvhO34o3JXmkqjau0yomu/view?usp=share_link" title="Resume Link">Resume</a></dt>
+                                    <dt><a href="https://drive.google.com/file/d/1e_WPKz0Cf1QXJhFpQ-6zQzwds3Rp3t14/view?usp=sharing" title="Resume Link">Resume</a></dt>
                             </dl>
                                     <h2 class="links-footer">Follow For More</h2>
                                     <ul class="icons">
