updated Instapix link

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
                                         </li>
                                         <li class="project-info">
                                             <img class="icon major style3 fa-copy instapix" src="./images/IP.png" style="cursor: pointer;"/>
-                                            <h3><a href="https://instapix-project.herokuapp.com/" title="Instapix Live Site">Instapix</a></h3>
+                                            <h3><a href="https://instapix.onrender.com" title="Instapix Live Site">Instapix</a></h3>
                                             <script>
                                                 document.querySelector('.instapix').addEventListener('click', () => {
-                                                    document.location.href = 'https://instapix-project.herokuapp.com/'
+                                                    document.location.href = 'https://instapix.onrender.com'
                                                 })
                                             </script>
                                             <div class="paragraph-desc">
@@ -163,7 +163,7 @@
                                     <dd><a href="tel:+7734120574">(773) 412-0574</a></dd>
                                     <dt>Email</dt>
                                     <dd><a href="mailto:kevinbarrios@ymail.com">kevinbarrios@ymail.com</a></dd>
-                                    <dt><a href="https://drive.google.com/file/d/1XtoSm8b60FyheAl5QJx1vyLnAEgaCatb/view?usp=sharing" title="Resume Link">Resume</a></dt>
+                                    <dt><a href="https://drive.google.com/file/d/1IQySDG_TLfFyPI8yBdDwvQIx27-5gmFi/view?usp=sharing" title="Resume Link">Resume</a></dt>
                             </dl>
                                     <h2 class="links-footer">Follow For More</h2>
                                     <ul class="icons">
