updated main page about me section

--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
                                     <header class="major">
                                         <h2>About Me</h2>
                                     </header>
-                                    <p>With the heart of an artist and the mind of an engineer, creativity and structure design an emergence of    passion, dedication, and curiosity. Merging to create perfect symmetry for an unparalleled and genuine personality.</p>
                                     <p>
-                                        I am well-rounded and come with a welcoming personality. I take an optimistic approach to tasks as there’s always a possibility of learning something new. I aim to find efficiency and simplify complex procedures, I have the agility to adapt to dynamic environments, and have the drive to obtain successful results.
+                                        With the heart of an artist and the mind of an engineer, creativity and structure design an emergence of passion, dedication, and curiosity; merging to create perfect symmetry for an unparalleled and genuine personality.
+                                    </p>
+                                    <p>
+                                        I aim to find solutions that best fit targeted goals. Making sure to produce efficient and tangible results in addition to being thorough and providing simplicity. With my welcoming personality and optimistic approach, I enjoy solving all kinds of challenges while learning something new along the way.
                                     </p>
                                     <ul class="actions">
                                         <li><a href="about-me.html" class="button">My Story</a></li>
