--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
                                     <dt>Phone</dt>
                                     <dd><a href="tel:+7734120574">(773) 412-0574</a></dd>
                                     <dt>Email</dt>
-                                    <dd><a href="mailto:kevinbarrios@ymail.com">kevinbarrios@ymail.com</a></dd>
-                                    <dt><a href="https://drive.google.com/file/d/1IQiypsCfcthk9aFjbDHzmhQI2PEYbua2/view?usp=sharing" title="Resume Link">Resume</a></dt>
+                                    <dd><a href="mailto:kbarriosdev@gmail.com">kbarriosdev@gmail.com</a></dd>
+                                    <dt><a href="https://drive.google.com/file/d/1IXlt7fGdaNcqaxty5YeuZhb13suBFGJr/view?usp=sharing" title="Resume Link">Resume</a></dt>
                             </dl>
                                     <h2 class="links-footer">Follow For More</h2>
                                     <ul class="icons">
