--- a/about-me.html
+++ b/about-me.html
@@ -92,15 +92,20 @@
 							</dl>
                                     <h2 class="links-footer">Follow For More</h2>
                                     <ul class="icons">
-                                        <li><a href="https://github.com/dayjyun" class="icon brands alt fa-github" title="GitHub"><span class="label">GitHub</span></a></li>
+                                        <li><a href="https://github.com/dayjyun" class="icon brands alt fa-github" title="GitHub" ><span class="label">GitHub</span></a></li>
                                         <li><a href="https://www.linkedin.com/in/kevinbarrios12" class="icon brands alt fa-linkedin" title="LinkedIn"><span class="label">LinkedIn</span></a></li>
-                                        <li><a href="https://angel.co/u/kevin-barrios" class="icon brands alt fa-angellist" title="AngelList"><span class="label">AngelList</a></li></span>
+                                        <li><a href="https://angel.co/u/kbarrios" target="_blank" rel="noopener noreferrer" class="icon brands alt fa-angellist" title="AngelList"><span class="label">AngelList</a></li></span>
                                     </ul>
                             </section>
                             <p class="copyright">&copy; Kevin Barrios. All Rights Reserved</p>
                         <p class="copyright">Designed using <a href="https://html5up.net/stellar">Stellar</a> by: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
-
+					<script>
+					let allATags = document.querySelectorAll('a')
+					allATags.map(tag => {
+						tag.setAttribute('target', '_blank')
+					})
+					</script>
 			</div>
 
 		<!-- Scripts -->
