updated wellfound profile link on about-me page

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                     <ul class="icons">
                                         <li><a href="https://github.com/dayjyun" class="icon brands fa-github alt" title="GitHub"><span class="label">GitHub</span></a></li>
                                         <li><a href="https://www.linkedin.com/in/kevinbarrios12" class="icon brands fa-linkedin alt" title="LinkedIn"><span class="label">LinkedIn</span></a></li>
-                                        <li><a href="https://angel.co/u/kevin-barrios" class="icon brands fa-angellist alt" title="AngelList"><span class="label">AngelList</a></li></span>
+                                        <li><a href="https://angel.co/u/kbarrios" class="icon brands fa-angellist alt" title="AngelList"><span class="label">AngelList</a></li></span>
                                     </ul>
                         </section>
                         <p class="copyright">&copy; Kevin Barrios. All Rights Reserved</p>
