updated code to be more dry

--- a/index.html
+++ b/index.html
@@ -63,37 +63,37 @@
                                     <h2>Skills</h2>
                                 </header>
                                 <ul class="statistics">
-                                    <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" rel="noreferrer" title='JavaScript'>
+                                    <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" title='JavaScript'>
                                         <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg" alt="javascript" width="80" height="80"/> </a>
-                                    <a href="https://reactjs.org/" target="_blank" rel="noreferrer" title='React'>
+                                    <a href="https://reactjs.org/" title='React'>
                                             <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/react/react-original-wordmark.svg" alt="react" width="90" height="90"/> </a>
-                                    <a href="https://redux.js.org" target="_blank" rel="noreferrer" title='Redux'>
+                                    <a href="https://redux.js.org" title='Redux'>
                                         <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/redux/redux-original.svg" alt="redux" width="90" height="90"/> </a>
-                                    <a href="https://www.python.org" target="_blank" rel="noreferrer" title='Python'>
+                                    <a href="https://www.python.org" title='Python'>
                                         <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="python" width="90" height="90"/> </a>
-                                    <a href="https://www.postgresql.org" target="_blank" rel="noreferrer" title='PostgreSQL'>
+                                    <a href="https://www.postgresql.org" title='PostgreSQL'>
                                         <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/postgresql/postgresql-original-wordmark.svg" alt="postgresql" width="90" height="90"/> </a>
-                                    <a href="https://www.sqlite.org/" target="_blank" rel="noreferrer" title='SQLite'>
+                                    <a href="https://www.sqlite.org/" title='SQLite'>
                                         <img src="https://www.vectorlogo.zone/logos/sqlite/sqlite-icon.svg" alt="sqlite" width="90" height="90"/> </a>
-                                    <a href="https://www.w3.org/html/" target="_blank" rel="noreferrer" title='HTML5'>
+                                    <a href="https://www.w3.org/html/" title='HTML5'>
                                         <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg" alt="html5" width="90" height="90"/> </a>
-                                    <a href="https://www.w3schools.com/css/" target="_blank" rel="noreferrer" title='CSS3'>
+                                    <a href="https://www.w3schools.com/css/" title='CSS3'>
                                         <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg" alt="css3" width="90" height="90"/> </a>
-                                    <a href="https://postman.com" target="_blank" rel="noreferrer" title='Postman'>
+                                    <a href="https://postman.com" title='Postman'>
                                         <img src="https://www.vectorlogo.zone/logos/getpostman/getpostman-icon.svg" alt="postman" width="90" height="90"/> </a>
-                                    <a href="https://nodejs.org" target="_blank" rel="noreferrer" title='Node.js'>
+                                    <a href="https://nodejs.org" title='Node.js'>
                                         <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/nodejs/nodejs-original-wordmark.svg" alt="nodejs" width="90" height="90"/> </a>
-                                    <a href="https://expressjs.com" target="_blank" rel="noreferrer" title='Express'>
+                                    <a href="https://expressjs.com" title='Express'>
                                         <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/express/express-original-wordmark.svg" alt="express" width="90" height="90"/> </a>
-                                    <a href="https://heroku.com" target="_blank" rel="noreferrer" title='Heroku'>
+                                    <a href="https://heroku.com" title='Heroku'>
                                         <img src="https://www.vectorlogo.zone/logos/heroku/heroku-icon.svg" alt="heroku" width="90" height="90"/> </a>
-                                    <a href="https://aws.amazon.com" target="_blank" rel="noreferrer" title='Amazon Web Service (AWS)'>
+                                    <a href="https://aws.amazon.com" title='Amazon Web Service (AWS)'>
                                         <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" alt="aws" width="90" height="90"/> </a>
-                                    <a href="https://www.docker.com/" target="_blank" rel="noreferrer" title='Docker'>
+                                    <a href="https://www.docker.com/" title='Docker'>
                                         <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/docker/docker-original-wordmark.svg" alt="docker" width="90" height="90"/> </a>
-                                    <a href="https://flask.palletsprojects.com/" target="_blank" rel="noreferrer" title='Flask'>
+                                    <a href="https://flask.palletsprojects.com/" title='Flask'>
                                         <img src="https://www.vectorlogo.zone/logos/pocoo_flask/pocoo_flask-icon.svg" alt="flask" width="90" height="90"/> </a>
-                                    <a href="https://git-scm.com/" target="_blank" rel="noreferrer" title='git'>
+                                    <a href="https://git-scm.com/" title='git'>
                                         <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg" alt="git" width="90" height="90"/> </a>
                                 </ul>
 
@@ -177,6 +177,14 @@
                         <p class="copyright">&copy; Kevin Barrios. All Rights Reserved</p>
                         <p class="copyright">Designed using <a href="https://html5up.net/stellar">Stellar</a> by: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
+                    <script>
+                        let allATags = document.querySelectorAll('a')
+                        allATags.forEach(tag => {
+                            if(tag.innerHTML === "My Story") return;
+                            tag.setAttribute('target', '_blank');
+                            tag.setAttribute('rel', 'noreferrer')
+                        })
+                    </script>
 			</div>
 
 		<!-- Scripts -->
