updated about me intro

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                         With the heart of an artist and the mind of an engineer, creativity and structure design an emergence of passion, dedication, and curiosity; merging to create perfect symmetry for an unparalleled and genuine personality.
                                     </p>
                                     <p>
-                                        I aim to find solutions that best fit targeted goals. Making sure to produce efficient and tangible results in addition to being thorough and providing simplicity. With my welcoming personality and optimistic approach, I enjoy solving all kinds of challenges while learning something new along the way.
+                                        My goal is to find the best solutions to any problem, striving for efficiency and measurable results while maintaining simplicity and thoroughness. I approach challenges with a positive and welcoming mindset, always eager to learn something new in the process.
                                     </p>
                                     <ul class="actions">
                                         <li><a href="about-me.html" class="button">My Story</a></li>
