updated project summaries

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                                 })
                                             </script>
                                             <div class="paragraph-desc">
-                                                <p>My version of Stack Overflow. I chose this site because it resembles my time at my previous job querying for solutions. <br> It consists of JavaScript, Express, and Sequelize in the backend, with Javascript, React, and Redux in the frontend. I used AWS to store uploaded profile images from users.</p>
+                                                <p>My version of Stack Overflow. I chose this site because it resembles my time at my previous job querying for solutions. It consists of JavaScript, Express.js, and SQL in the backend, with React-Redux in the frontend. I utilized AWS to store uploaded profile images from users.</p>
                                             </div>
                                             <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/stack-spill-project">GitHub</a></h5>
                                         </li>
@@ -125,7 +125,7 @@
                                                 })
                                             </script>
                                             <div class="paragraph-desc">
-                                                <p>Instapix was created because social media is highly influential in connecting with others. It is an Instagram clone built with Python, Flask, and SQLAlchemy to model the backend with Javascript React, and Redux, in the frontend. Integrating Docker and Alembic for database migration.</p>
+                                                <p>Instapix was created because social media is highly influential in connecting with others. It is an Instagram clone built with Python, Flask, and SQLAlchemy to model the backend with React-Redux in the frontend. Integrating Alembic for database migration and Docker for deployment.</p>
                                             </div>
                                             <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/instapix-project">GitHub</a></h5>
                                         </li>
@@ -138,7 +138,7 @@
                                                 })
                                             </script>
                                             <div class="paragraph-desc">
-                                                <p>SoundCloud Clone was developed from my connection with music at school. The application is designed for musicians to upload and share their music. Like Stack Spill, it consists of JavaScript, Express, and Sequelize in the backend, and Javascript React and Redux, in the frontend. Using AWS to store uploaded images and audio files.</p>
+                                                <p>SoundCloud Clone was developed from my connection with music. The application is designed for musicians to upload their recordings. Like Stack Spill, it consists of JavaScript, Express.js, and SQL in the backend, and React-Redux in the frontend while using AWS to store images and audio.</p>
                                             </div>
                                             <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/SoundCloud-Project">GitHub</a></h5>
                                         </li>
