--- a/index.html
+++ b/index.html
@@ -63,38 +63,60 @@
                                     <h2>Skills</h2>
                                 </header>
                                 <ul class="statistics">
+                                    <!-- JS -->
                                     <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" title='JavaScript'>
-                                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg" alt="javascript" width="80" height="80"/> </a>
+                                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg" alt="javascript" width="90" height="90"/> </a>
                                     <a href="https://reactjs.org/" title='React'>
-                                            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/react/react-original-wordmark.svg" alt="react" width="90" height="90"/> </a>
+                                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/react/react-original-wordmark.svg" alt="react" width="90" height="90"/> </a>
                                     <a href="https://redux.js.org" title='Redux'>
                                         <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/redux/redux-original.svg" alt="redux" width="90" height="90"/> </a>
+                                    <a href="https://expressjs.com" title='Express'>
+                                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/express/express-original-wordmark.svg" alt="express" width="90" height="90"/> </a>
+
+                                    <!-- Java -->
+                                    <a href="https://www.java.com/en/" title="Java">
+                                        <img src="https://www.vectorlogo.zone/logos/java/java-icon.svg" alt="java" width="90" height="90" /></a>
+                                    <a href="https://angular.io/" title="Angular">
+                                        <img src="https://www.vectorlogo.zone/logos/angular/angular-icon.svg" alt="angular" width="90" height="90"></a>
+                                    <a href="https://www.vectorlogo.zone/logos/springio/springio-icon.svg" title="Spring ">
+                                        <img src="https://www.vectorlogo.zone/logos/springio/springio-icon.svg" alt="spring" width="80" height="80"></a>
+                                    <a href="https://www.typescriptlang.org/" title="TypeScript">
+                                        <img src="https://www.vectorlogo.zone/logos/typescriptlang/typescriptlang-icon.svg" alt="typescript" width="90" height="90"></a>
+
+                                    <!-- PY -->
                                     <a href="https://www.python.org" title='Python'>
-                                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="python" width="90" height="90"/> </a>
+                                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="python" width="90" height="90"/></a>
+                                    <a href="https://flask.palletsprojects.com/" title='Flask'>
+                                        <img src="https://www.vectorlogo.zone/logos/pocoo_flask/pocoo_flask-icon.svg" alt="flask" width="90" height="90"/></a>
+
+                                    <!-- Database -->
                                     <a href="https://www.postgresql.org" title='PostgreSQL'>
                                         <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/postgresql/postgresql-original-wordmark.svg" alt="postgresql" width="90" height="90"/> </a>
                                     <a href="https://www.sqlite.org/" title='SQLite'>
-                                        <img src="https://www.vectorlogo.zone/logos/sqlite/sqlite-icon.svg" alt="sqlite" width="90" height="90"/> </a>
-                                    <a href="https://www.w3.org/html/" title='HTML5'>
-                                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg" alt="html5" width="90" height="90"/> </a>
-                                    <a href="https://www.w3schools.com/css/" title='CSS3'>
-                                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg" alt="css3" width="90" height="90"/> </a>
-                                    <a href="https://postman.com" title='Postman'>
-                                        <img src="https://www.vectorlogo.zone/logos/getpostman/getpostman-icon.svg" alt="postman" width="90" height="90"/> </a>
+                                        <img src="https://www.vectorlogo.zone/logos/sqlite/sqlite-icon.svg" alt="sqlite" width="90" height="90"/></a>
+                                     <a href="https://postman.com" title='Postman'>
+                                        <img src="https://www.vectorlogo.zone/logos/getpostman/getpostman-icon.svg" alt="postman" width="80" height="80"/></a>
+
+                                    <!-- Basics -->
                                     <a href="https://nodejs.org" title='Node.js'>
-                                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/nodejs/nodejs-original-wordmark.svg" alt="nodejs" width="90" height="90"/> </a>
-                                    <a href="https://expressjs.com" title='Express'>
-                                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/express/express-original-wordmark.svg" alt="express" width="90" height="90"/> </a>
+                                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/nodejs/nodejs-original-wordmark.svg" alt="nodejs" width="90" height="90"/></a>
+                                    <a href="https://www.w3.org/html/" title='HTML5'>
+                                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg" alt="html5" width="90" height="90"/></a>
+                                    <a href="https://www.w3schools.com/css/" title='CSS3'>
+                                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg" alt="css3" width="90" height="90"/></a>
+
+                                    <!-- Hosting and Deployment -->
                                     <a href="https://heroku.com" title='Heroku'>
-                                        <img src="https://www.vectorlogo.zone/logos/heroku/heroku-icon.svg" alt="heroku" width="90" height="90"/> </a>
+                                        <img src="https://www.vectorlogo.zone/logos/heroku/heroku-icon.svg" alt="heroku" width="90" height="90"/></a>
                                     <a href="https://aws.amazon.com" title='Amazon Web Service (AWS)'>
                                         <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" alt="aws" width="90" height="90"/> </a>
                                     <a href="https://www.docker.com/" title='Docker'>
-                                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/docker/docker-original-wordmark.svg" alt="docker" width="90" height="90"/> </a>
-                                    <a href="https://flask.palletsprojects.com/" title='Flask'>
-                                        <img src="https://www.vectorlogo.zone/logos/pocoo_flask/pocoo_flask-icon.svg" alt="flask" width="90" height="90"/> </a>
-                                    <a href="https://git-scm.com/" title='git'>
-                                        <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg" alt="git" width="90" height="90"/> </a>
+                                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/docker/docker-original-wordmark.svg" alt="docker" width="90" height="90"/></a>
+
+                                    <!-- Git -->
+                                    <a href="https://git-scm.com/" title='Git'>
+                                        <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg" alt="git" width="90" height="90"/></a>
+
                                 </ul>
 
                             <!-- Projects -->
