--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                         <li><a href="about-me.html" class="button">My Story</a></li>
                                     </ul>
                                 </div>
-                                <span class="image"><img src="images/pfp.jpeg" alt="" /></span>
+                                <span class="image"><img src="images/hspfp.png" alt="" /></span>
                             </div>
                         </section>
 
