--- a/index.html
+++ b/index.html
@@ -164,6 +164,45 @@
                                             </div>
                                             <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/SoundCloud-Project">GitHub</a></h5>
                                         </li>
+                                        <li class="project-info">
+                                            <img class="icon major style3 fa-copy stack-spill" src="./images/SS.png" style="cursor: pointer;"/>
+                                            <h3><a href="https://stack-spill.herokuapp.com/" title="Stack Spill Live Site">Stack Spill</a></h3>
+                                            <script>
+                                                document.querySelector('.stack-spill').addEventListener('click', () => {
+                                                    document.location.href = 'https://stack-spill.herokuapp.com/'
+                                                })
+                                            </script>
+                                            <div class="paragraph-desc">
+                                                <p>My version of Stack Overflow. I chose this site because it resembles my time at my previous job querying for solutions. It consists of JavaScript, Express.js, and SQL in the backend, with React-Redux in the frontend. I utilized AWS to store uploaded profile images from users.</p>
+                                            </div>
+                                            <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/stack-spill-project">GitHub</a></h5>
+                                        </li>
+                                        <li class="project-info">
+                                            <img class="icon major style3 fa-copy instapix" src="./images/IP.png" style="cursor: pointer;"/>
+                                            <h3><a href="https://instapix.onrender.com" title="Instapix Live Site">Instapix</a></h3>
+                                            <script>
+                                                document.querySelector('.instapix').addEventListener('click', () => {
+                                                    document.location.href = 'https://instapix.onrender.com'
+                                                })
+                                            </script>
+                                            <div class="paragraph-desc">
+                                                <p>Instapix was created because social media is highly influential in connecting with others. It is an Instagram clone built with Python, Flask, and SQLAlchemy to model the backend with React-Redux in the frontend. Integrating Alembic for database migration and Docker for deployment.</p>
+                                            </div>
+                                            <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/instapix-project">GitHub</a></h5>
+                                        </li>
+                                        <li class="project-info">
+                                            <img class="icon major style3 fa-copy ss-clone" src="./images/SCC.png" style="cursor: pointer;"/>
+                                            <h3><a href="https://soundcloud-project.onrender.com/" title="SoundCloud Clone Live Site">SoundCloud Clone</a></h3>
+                                            <script>
+                                                document.querySelector('.ss-clone').addEventListener('click', () => {
+                                                    document.location.href = 'https://soundcloud-project.onrender.com/'
+                                                })
+                                            </script>
+                                            <div class="paragraph-desc">
+                                                <p>SoundCloud Clone was developed from my connection with music. The application is designed for musicians to upload their recordings. Like Stack Spill, it consists of JavaScript, Express.js, and SQL in the backend, and React-Redux in the frontend while using AWS to store images and audio.</p>
+                                            </div>
+                                            <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/SoundCloud-Project">GitHub</a></h5>
+                                        </li>
                                     </ul>
                                 </section>
                             </section>
