Updated README. Added project links

--- a/index.html
+++ b/index.html
@@ -124,32 +124,34 @@
                                     <header class="major">
                                         <h2>Projects</h2>
                                     </header>
+                                    <!-- General Assembly -->
+                                    <h2>General Assembly</h2>
                                     <ul class="features">
                                         <li class="project-info">
-                                            <img class="icon major style3 fa-copy stack-spill" src="./images/SS.png" style="cursor: pointer;"/>
-                                            <h3><a href="https://stack-spill.herokuapp.com/" title="Stack Spill Live Site">Stack Spill</a></h3>
+                                            <img class="icon major style3 fa-copy skylight skylight-frontend" src="./images/SkyLight.png" style="cursor: pointer;"/>
+                                            <h3><a href="https://github.com/dayjyun/skylight-frontend" title="SkyLight Frontend">SkyLight - Frontend</a></h3>
                                             <script>
                                                 document.querySelector('.stack-spill').addEventListener('click', () => {
-                                                    document.location.href = 'https://stack-spill.herokuapp.com/'
+                                                    document.location.href = 'https://github.com/dayjyun/skylight-frontend'
                                                 })
                                             </script>
                                             <div class="paragraph-desc">
                                                 <p>My version of Stack Overflow. I chose this site because it resembles my time at my previous job querying for solutions. It consists of JavaScript, Express.js, and SQL in the backend, with React-Redux in the frontend. I utilized AWS to store uploaded profile images from users.</p>
                                             </div>
-                                            <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/stack-spill-project">GitHub</a></h5>
+                                            <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/skylight-frontend">GitHub</a></h5>
                                         </li>
                                         <li class="project-info">
-                                            <img class="icon major style3 fa-copy instapix" src="./images/IP.png" style="cursor: pointer;"/>
-                                            <h3><a href="https://instapix.onrender.com" title="Instapix Live Site">Instapix</a></h3>
+                                            <img class="icon major style3 fa-copy skylight skylight-backend" src="./images/SkyLight.png" style="cursor: pointer;"/>
+                                            <h3><a href="https://github.com/dayjyun/skylight-backend" title="SkyLight Backend">SkyLight - Backend</a></h3>
                                             <script>
-                                                document.querySelector('.instapix').addEventListener('click', () => {
-                                                    document.location.href = 'https://instapix.onrender.com'
+                                                document.querySelector('.stack-spill').addEventListener('click', () => {
+                                                    document.location.href = 'https://github.com/dayjyun/skylight-backend'
                                                 })
                                             </script>
                                             <div class="paragraph-desc">
-                                                <p>Instapix was created because social media is highly influential in connecting with others. It is an Instagram clone built with Python, Flask, and SQLAlchemy to model the backend with React-Redux in the frontend. Integrating Alembic for database migration and Docker for deployment.</p>
+                                                <p>My version of Stack Overflow. I chose this site because it resembles my time at my previous job querying for solutions. It consists of JavaScript, Express.js, and SQL in the backend, with React-Redux in the frontend. I utilized AWS to store uploaded profile images from users.</p>
                                             </div>
-                                            <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/instapix-project">GitHub</a></h5>
+                                            <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/skylight-backend">GitHub</a></h5>
                                         </li>
                                         <li class="project-info">
                                             <img class="icon major style3 fa-copy ss-clone" src="./images/SCC.png" style="cursor: pointer;"/>
@@ -164,6 +166,12 @@
                                             </div>
                                             <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/SoundCloud-Project">GitHub</a></h5>
                                         </li>
+
+                                    </ul>
+
+                                    <!-- App Academy -->
+                                    <h2>App Academy</h2>
+                                    <ul class="features">
                                         <li class="project-info">
                                             <img class="icon major style3 fa-copy stack-spill" src="./images/SS.png" style="cursor: pointer;"/>
                                             <h3><a href="https://stack-spill.herokuapp.com/" title="Stack Spill Live Site">Stack Spill</a></h3>
